--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+footer {
+    color: white; 
+    position: fixed;
+    bottom: 0; 
+    left: 600px; 
+    text-align: center;
+}
 h1 {
     background-color: cornsilk;
     color: darkcyan;
@@ -15,6 +22,9 @@ h1 {
     width: 20%;
     margin-left: 40%;
     margin-right: 40%;
+}
+.footer {
+    color: white; 
 }
 .results {
     background-color: cornsilk;
