--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,18 @@ h1 {
     margin-left: 40%;
     margin-right: 40%;
 }
+.bottombtn {
+    width: fit-content;
+    background-color: #F493C9;
+    border-color: white;
+    margin-left: 48%;
+    margin-top: 20px;
+}
 .footer {
     color: white; 
+}
+.header {
+    margin-top: 20px; 
 }
 .results {
     background-color: cornsilk;
@@ -32,10 +42,20 @@ h1 {
     width: 60%;
     margin-left: 20%;
     margin-right: 20%;
+    border-style: solid;
+    border-color: #496DCB;
 }
 .question-block {
+    clear: both;
     background-color: cornsilk;
 }
 h2 {
     margin: 40px;
+}
+#startbtn {
+    width: fit-content;
+    background-color: #496DCB;
+   margin-left: 48%; 
+   margin-top: 20px;
+   margin-bottom: 20px;
 }
